# University-Project

./: README.md
[Assembly] FSEC-SS Cash Register System/: CSLLT.ASM
[CPP] Movie Reservation System/: DSTR assignment.sln  DSTR assignment.vcxproj  DSTR assignment.vcxproj.filters  Movie Ticket System.cpp
[CPP] Movie Reservation System/Debug/: DSTR assignment.exe.recipe  DSTR assignment.ilk  DSTR assignment.vcxproj.FileListAbsolute.txt  vc142.idb
[Java] Blockchain System/: myledger.txt  pom.xml
[Java] Concurreny Airport/src/: Airport.java  Gate.java  Passenger.java  Plane.java  Runway.java
[Java] High Frequency Trading System/: pom.xml
[Java] Retail Order Management System/: build.xml  customer.txt
[Java] Retail Order Management System/nbproject/: build-impl.xml  genfiles.properties
[LabView] ATM machine/: Client ATM machine.vi  Server ATM machine.vi
[LabView] ATM machine/Resources/: Accounts.txt
[Matlab] Glove Defects Detection System/: Gloves_Defect_Detection_System.m  browse_image.m  choose_operation.m  defect_type_table.mat  detect_defect.m  extract_feature.m  segment_image.m  train_image.m
[Python] Car Part Inventory Management System/: Thean_Yee_Sin-TP061278.py  WAY.txt  WBR.txt  WBS.txt
[Python] Diabetes Prediction Machine Learning/: diabetes_assignment.ipynb
[R] Student/: Thean Yee Sin-TP061278.R
[Rust] High Frequency Trading System/: Cargo.toml
[Rust] High Frequency Trading System/src/: High_Frequency_Trading_System.rs  main.rs
[SQL] Airline Reservation System/: Airline_reservation_system.sql
(+42 files in other folders)
